[package]
name = "axi-uartlite"
version = "0.1.0"
description = "LogiCORE AXI UART Lite v2.0 driver"
author = ["Robin Mueller <muellerr@irs.uni-stuttgart.de>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
derive-mmio = "0.6"
bitbybit = "1.4"
arbitrary-int = "2"
nb = "1"
embedded-hal-nb = "1"
embedded-io = "0.7"
embedded-io-async = "0.7"
critical-section = "1"
thiserror = { version = "2", default-features = false }
embassy-sync = "0.7"
raw-slicee = "0.1"

[features]
default = ["1-waker"]
1-waker = []
2-wakers = []
4-wakers = []
8-wakers = []
16-wakers = []
32-wakers = []

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]
